fixed classes/naming for visibility

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,9 @@
-img {
-    height: 10px;
+.logo {
+    justify-content: center;
+    height: 30px;
     width: auto;
     filter: invert(57%) sepia(59%) saturate(338%) hue-rotate(352deg) brightness(96%) contrast(87%);
+    visibility: visible!;
 }
 
 .navbar1 {
